# IIOS-Complete-v1.2.0

./: .gitattributes  .gitignore  00_MASTER_CHARTER.md  01_CONSTITUTION.md  02_SYSTEM_ARCHITECTURE.md  03_GOVERNANCE_SECURITY.md  04_CONTEXT_MEMORY.md  05_OPERATING_MODEL.md  07_KNOWLEDGE_VAULT.md  13_IMPLEMENTATION_ROADMAP.md  14_ACCEPTANCE_TESTS.md  15_RESEARCH_AUDIT.md  18_AUDIT_DISPOSITION.md  20_OWNER_RATIFICATION.md  ADR-0003-OBSIDIAN-VAULT.md  ADR-0004-GRAPHIFY-DERIVED-GRAPH.md  ADR-0005-MODEL-ROUTING.md  ADR-0006-SKILL-PROMOTION.md  ADR-0007-INVARIANT-KERNEL.md  ADR-0008-COWORK-BOUNDARY.md  ADR-0009-CONTROL-PLANE-SEPARATION.md  ADR.md  AGENTS.md  AUTONOMY_PROTOCOL.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  MASTER_IMPLEMENTATION_PROGRAM.md  OWNER_PROFILE.md  PROJECT_STATE.md  README.md  SKILL.md.example  SOUL.md.example  START_HERE.md  Source.md  download (10)  download (12)  download (14)  download (16)  download (20)  (+10 more)
.claude/: settings.json
.github/: CODEOWNERS.example
docs/: 00_MASTER_CHARTER.md  01_CONSTITUTION.md  02_SYSTEM_ARCHITECTURE.md  03_GOVERNANCE_SECURITY.md  07_KNOWLEDGE_VAULT.md  08_GRAPHIFY_ARCHITECTURE.md  10_INFRASTRUCTURE.md  12_COST_GOVERNANCE.md  13_IMPLEMENTATION_ROADMAP.md  14_ACCEPTANCE_TESTS.md  20_OWNER_RATIFICATION.md  21_GOVERNANCE_CORE_SPEC.md  22_POLICY_ENGINE_EVALUATION.md  23_CAPABILITY_MODEL.md  24_APPROVAL_MODEL.md  25_AUDIT_EVENT_MODEL.md  26_KILL_SWITCH_SPEC.md  30_GOVERNANCE_IMPLEMENTATION_SKELETON.md  31_HERMES_DEPLOYMENT_PACKAGE.md  32_ONYX_EXECUTIVE_ORCHESTRATOR_SPEC.md  AGENT_REGISTRY.md  AUTONOMY_ACCEPTANCE_TESTS.md  BRAIN_REGISTRY.md  DOMAIN_CATALOG.md  HANDOFF_PROTOCOL.md  (+6 more)
(+101 files in other folders)
